--- a/pages/6489.html
+++ b/pages/6489.html
@@ -713,7 +713,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> be an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\mathcal{A})</annotation></semantics></math> be its <a class="existingWikiWord" href="/nlab/show/Grothendieck+group">Grothendieck group</a>.</p>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> be an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> and write <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\mathcal{A})</annotation></semantics></math> for its <a class="existingWikiWord" href="/nlab/show/Grothendieck+group">Grothendieck group</a>.</p>
 
 <div class="num_defn" id="StabilityFunction">
 <h6 id="definition_2">Definition</h6>
@@ -746,13 +746,31 @@ margin-left: 0em;
 
 <p>The <em>phase</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\phi(E)</annotation></semantics></math> of an object <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is just the <a class="existingWikiWord" href="/nlab/show/complex+phase">complex phase</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding="application/x-tex">\phi</annotation></semantics></math> that occurs in the representation from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math>. Alternatively, by plotting <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Z(E)</annotation></semantics></math> in the <a class="existingWikiWord" href="/nlab/show/complex+plane">complex plane</a>, the phase is the argument (slope) divided by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi></mrow><annotation encoding="application/x-tex">\pi</annotation></semantics></math>. The phase of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> will be denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\phi(E)</annotation></semantics></math>.</p>
 
-<p>An object <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is called <strong>semi-stable</strong> if for all non-trivial <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>⊂</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">F\subset E</annotation></semantics></math> we have the property that</p>
+<div class="num_defn" id="StableObjects">
+<h6 id="definition_3">Definition</h6>
+
+<p><strong>((semi-)stable objects)</strong></p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> equipped with a stability function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mo>=</mo><mi>r</mi><mi>exp</mi><mo stretchy="false">(</mo><mi>i</mi><mi>π</mi><mi>ϕ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Z = r exp(i\pi \phi)</annotation></semantics></math>, an <a class="existingWikiWord" href="/nlab/show/object">object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mo>∈</mo><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">E \in \mathcal{A}</annotation></semantics></math> is called a</p>
+
+<ol>
+<li>
+<p><em>semi-stable object</em> if for all non-trivial <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>⊂</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">F\subset E</annotation></semantics></math> we have that</p>
 <div class="maruku-equation" id="eq:SemiStability"><span class="maruku-eq-number">(2)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>F</mi><mo stretchy="false">)</mo><mo>≤</mo><mi>ϕ</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   
   \phi(F)\leq \phi(E)
 
-</annotation></semantics></math></div>
-<p>An object <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is called <strong>stable</strong> if for all non-trivial, proper <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>⊂</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">F\subset E</annotation></semantics></math> we have the property that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>F</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\phi(F)</annotation></semantics></math> &lt; <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\phi(E)</annotation></semantics></math>.</p>
+</annotation></semantics></math></div></li>
+
+<li>
+<p><em>stable object</em> if for all non-trivial, proper <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>⊂</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">F\subset E</annotation></semantics></math> we have the property that</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><mi>F</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  \phi(F)</annotation></semantics></math></div></li>
+</ol>
+</div>
+
+<div class="num_defn">
+<h6 id="definition_4">Definition</h6>
 
 <p>A stability function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mo>:</mo><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">Z:K(\mathcal{A})\to \mathbb{C}</annotation></semantics></math> <a class="maruku-eqref" href="#eq:StabilityFunction">(1)</a> is said to have the <strong>Harder-Narasimhan property</strong> if for any non-<a class="existingWikiWord" href="/nlab/show/zero+object">zero object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> there exists a finite <a class="existingWikiWord" href="/nlab/show/filtered+object">filtration</a> by <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>0</mn><mo>=</mo><msub><mi>E</mi> <mn>0</mn></msub><mo>⊂</mo><msub><mi>E</mi> <mn>1</mn></msub><mo>⊂</mo><mi>⋯</mi><mo>⊂</mo><msub><mi>E</mi> <mi>n</mi></msub><mo>=</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">
@@ -769,11 +787,12 @@ margin-left: 0em;
   \phi(F_1) \gt \phi(F_2) \gt \cdots \gt\phi(F_n)
   \,.
 
-</annotation></semantics></math></div>
-<p>Suppose <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding="application/x-tex">\mathcal{D}</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/triangulated+category">triangulated category</a> (usually arising as the <a class="existingWikiWord" href="/nlab/show/derived+category">derived category</a> of some <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a>).</p>
+</annotation></semantics></math></div></div>
+
+<p>Now suppose that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding="application/x-tex">\mathcal{D}</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/triangulated+category">triangulated category</a> (usually arising as the <a class="existingWikiWord" href="/nlab/show/derived+category">derived category</a> of some <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a>).</p>
 
 <div class="num_defn" id="Slicing">
-<h6 id="definition_3">Definition</h6>
+<h6 id="definition_5">Definition</h6>
 
 <p><strong>(slicing)</strong></p>
 
@@ -797,7 +816,7 @@ margin-left: 0em;
 </div>
 
 <div class="num_defn" id="StabilityCondition">
-<h6 id="definition_4">Definition</h6>
+<h6 id="definition_6">Definition</h6>
 
 <p><strong>(stability condition)</strong></p>
 
@@ -1036,14 +1055,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 11:41:00.
+  Last revised on September 30, 2018 at 12:35:15.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
