--- a/pages/4358.html
+++ b/pages/4358.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9097/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9097/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -426,11 +426,14 @@ margin-left: 0em;
 </ul>
 <li><a href='#specific_classes_of_prime_numbers'>Specific classes of prime numbers</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id="definition">Definition</h2>
-
+<div style="float:right;margin:0 10px 10px 0;">
+<img src="https://ncatlab.org/nlab/files/SomePrimes.jpg" width="60" />
+</div>
 <p>A <em>prime number</em> is a <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a> which cannot be written as a <a class="existingWikiWord" href="/nlab/show/multiplication">product</a> of two smaller numbers, hence a natural number greater than 1, which is <a class="existingWikiWord" href="/nlab/show/division">divisible</a> only by 1 and by itself.</p>
 
 <p>This means that every <a class="existingWikiWord" href="/nlab/show/natural+number">natural number</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">n \in \mathbb{N}</annotation></semantics></math> is, up to re-ordering of factors, <em>uniquely</em> expressed as a product of a tuple of prime numbers:</p>
@@ -441,6 +444,8 @@ margin-left: 0em;
 <p>This is called the <em>prime factorization</em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>.</p>
 
 <p>Notice that while the number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>1</mn><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">1 \in \mathbb{N}</annotation></semantics></math> is, clearly, only divisible by one and by itself, hence might look like it deserves to be counted as a prime number, too, this would break the uniqueness of this prime factorization. In view of the general phenomenon in classifications in <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a> of some objects being <em><a class="existingWikiWord" href="/nlab/show/too+simple+to+be+simple">too simple to be simple</a></em> one could say that 1 is “too prime to be prime”.</p>
+
+<p>However, historically, some authors did count 1 as a prime number, see e.g. <a href="#Roegel11">Roegel 11</a>.</p>
 
 <h2 id="RelationToIdeals">Relation to ideals and arithmetic geometry</h2>
 
@@ -555,20 +560,34 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Bertrand%27s+postulate">Bertrand's postulate</a></p>
 </li>
 </ul>
+
+<h2 id="references">References</h2>
+
+<p>For historical discussion see</p>
+
+<ul>
+<li id="Roegel11">Denis Roegel, <em>A reconstruction of Lehmer’s table of primes (1914)</em>, 2011 (<a href="http://locomat.loria.fr/lehmer1914/lehmer1914doc.pdf">pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Prime_number">Prime number</a></em></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 04:11:06.
+  Last revised on October  3, 2018 at 07:14:51.
   See the <a href="https://ncatlab.org/nlab/history/prime number" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/prime+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/prime+number/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/prime+number" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/prime+number" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/prime+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/prime+number/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/prime+number" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/prime+number" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/prime number/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
