--- a/pages/11679.html
+++ b/pages/11679.html
@@ -904,6 +904,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/slope+filtration">slope filtration</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/degree+of+a+coherent+sheaf">degree of a coherent sheaf</a></p>
 </li>
 
@@ -947,14 +951,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 05:14:16.
+  Last revised on October  3, 2018 at 10:49:12.
   See the <a href="https://ncatlab.org/nlab/history/slope of a coherent sheaf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/slope+of+a+coherent+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+of+a+coherent+sheaf/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/slope+of+a+coherent+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+of+a+coherent+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/slope+of+a+coherent+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+of+a+coherent+sheaf/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/slope+of+a+coherent+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+of+a+coherent+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/slope of a coherent sheaf/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
