--- a/pages/19745.html
+++ b/pages/19745.html
@@ -478,7 +478,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p><strong><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>-rings</strong> are a kind of <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a>. They may be seen as collections of integral linear combinations of generalized symmetric powers defined on <a class="existingWikiWord" href="/nlab/show/Burnside+rings">Burnside rings</a>. The <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> of a space, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>π</mi> <mn>0</mn></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\pi^0(X)</annotation></semantics></math>, is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>-ring (<a href="#Guillot06">Guillot 06, Thrm 4.5</a>).</p>
+<p>A <strong><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>-ring</strong> is a <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>, equipped with a set of operations, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>β</mi> <mi>H</mi></msub><mo>:</mo><mi>R</mi><mo>→</mo><mi>R</mi></mrow><annotation encoding="application/x-tex">\beta_H: R \to R</annotation></semantics></math>, indexed by subgroups of <a class="existingWikiWord" href="/nlab/show/symmetric+groups">symmetric groups</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">S_n</annotation></semantics></math>, satisfying a number of conditions. They may be seen as collections of integral linear combinations of generalized symmetric powers defined on <a class="existingWikiWord" href="/nlab/show/Burnside+rings">Burnside rings</a>. The <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> of a space, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>π</mi> <mn>0</mn></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\pi^0(X)</annotation></semantics></math>, is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi></mrow><annotation encoding="application/x-tex">\beta</annotation></semantics></math>-ring (<a href="#Guillot06">Guillot 06, Thrm 4.5</a>).</p>
 
 <p>They are completely unrelated to <a class="existingWikiWord" href="/nlab/show/relational+beta-modules">relational beta-modules</a>.</p>
 
@@ -525,14 +525,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 07:39:09.
+  Last revised on October  3, 2018 at 10:09:31.
   See the <a href="https://ncatlab.org/nlab/history/beta-ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/beta-ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/beta-ring/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/beta-ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/beta-ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/beta-ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/beta-ring/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/beta-ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/beta-ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/beta-ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
