--- a/pages/19746.html
+++ b/pages/19746.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      slope filtration in nLab
+      slope in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      slope filtration
+      slope
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/976/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9101/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,52 +309,23 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#overview'>Overview</a></li>
-<li><a href='#survey_by_andre'>Survey by Andre</a></li>
-<li><a href='#other_aspects_and_references'>Other aspects and references</a></li>
-</ul>
-</div>
-
-<h2 id="overview">Overview</h2>
-
-<p>There are many examples that the objects of <a class="existingWikiWord" href="/nlab/show/additive+categories">additive categories</a> (abelian, abelian tensor categories, triangulated etc.) are equipped with <strong>slope filtrations</strong>, which are labelled by <strong>real</strong> numbers.</p>
-
-<p>Slope is here related to <a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a>. For instance <a class="existingWikiWord" href="/nlab/show/stable+coherent+sheaf">stability of coherent sheaves</a> in the case of <span class="newWikiWord">slope of coherent sheavees<a href="/nlab/new/slope+of+coherent+sheavees">?</a></span></p>
-
-<p>The <em>Stokes phenomenon</em> in the study of asymptotics of differential equations may be regarded as a similar structure on the <a class="existingWikiWord" href="/nlab/show/D-modules">D-modules</a> (or by the <a class="existingWikiWord" href="/nlab/show/Riemann-Hilbert+correspondence">Riemann-Hilbert correspondence</a>, on the object in certain category of monodromy data), which correspond to the solutions of differential equations.</p>
-
-<p>See also <a class="existingWikiWord" href="/nlab/show/wall+crossing">wall crossing</a>, <a class="existingWikiWord" href="/nlab/show/Stokes+phenomenon">Stokes phenomenon</a>, <span class="newWikiWord">Newton polygon<a href="/nlab/new/Newton+polygon">?</a></span>.</p>
-
-<h2 id="survey_by_andre">Survey by Andre</h2>
-
-<p>For the slopes in algebraic and arithmetic geometry there is a recent survey</p>
+<p>In the contents of elementary <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a></p>
 
 <ul>
-<li>Yves Andre, <em>Slope filtrations</em>, <a href="http://arxiv.org/abs/0812.3921">arxiv/0812.3921</a></li>
+<li><span class="newWikiWord">slope of a line<a href="/nlab/new/slope+of+a+line">?</a></span></li>
 </ul>
 
-<p>Here is an introductory passage:</p>
-
-<blockquote>
-<p>Slope filtrations occur in algebraic and analytic geometry, in asymptotic analysis, in ramification theory, in p-adic theories, in geometry of numbers…Five basic examples are the Harder-Narasimhan filtration of vector bundles over a smooth projective curve, the Dieudonne-Manin filtration of F-isocrystals over the p-adic point, the Turrittin-Levelt filtration of formal differential modules, the Hasse-Arf filtration of finite Galois representations of local fields, and the Grayson-Stuhler filtration of euclidean lattices. Despite the variety of their origins, these filtrations share a lot of similar features.</p>
-</blockquote>
-
-<h2 id="other_aspects_and_references">Other aspects and references</h2>
-
-<p>The story of slope filtrations is important for the construction of various moduli spaces (esp. in <a class="existingWikiWord" href="/nlab/show/algebraic+geometry">algebraic geometry</a> and in mathematical physics), for <a class="existingWikiWord" href="/nlab/show/Hodge+theory">Hodge theory</a>, theory of <a class="existingWikiWord" href="/nlab/show/motive">motive</a>s, study of motivic properties of Feynman integrals…</p>
+<p>In the context of <a class="existingWikiWord" href="/nlab/show/stability+conditions">stability conditions</a></p>
 
 <ul>
 <li>
-<p>L. Katzarkov, <a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">M. Kontsevich</a>, T. Pantev, <em>Hodge theoretic aspects of mirror symmetry</em>, <a href="http://arxiv.org/abs/0806.0107">arxiv/0806.0107</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/slope+of+a+coherent+sheaf">slope of a coherent sheaf</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a>, <a class="existingWikiWord" href="/nlab/show/Yan+Soibelman">Yan Soibelman</a>, <em>Motivic Donaldson-Thomas invariants: summary of results</em>, <a href="http://arxiv.org/abs/0910.4315">0910.4315</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/slope+filtration">slope filtration</a></p>
 </li>
 </ul>
 </body></html>
@@ -363,22 +334,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 10:38:34.
-  See the <a href="https://ncatlab.org/nlab/history/slope filtration" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October  3, 2018 at 10:48:07.
+  See the <a href="https://ncatlab.org/nlab/history/slope" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/slope+filtration" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+filtration/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/slope+filtration" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+filtration" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/slope filtration/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/slope" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/slope/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/slope+filtration" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/slope" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/slope+filtration" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/slope" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/slope+filtration" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/slope" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
