--- a/pages/5070.html
+++ b/pages/5070.html
@@ -910,7 +910,14 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#definition">Definition</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="definition">Definition</h2>
 
 <p>The <strong>plane</strong> is the <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^2</annotation></semantics></math>. This is naturally a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a>, a <a class="existingWikiWord" href="/nlab/show/manifold">manifold</a>, and a <a class="existingWikiWord" href="/nlab/show/smooth+manifold">smooth manifold</a>. If we take one of the axes (traditionally the second) to be imaginary, then this <strong>real plane</strong> may be identified with the <a class="existingWikiWord" href="/nlab/show/complex+plane">complex plane</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{C}^1</annotation></semantics></math>. As a stage for <a class="existingWikiWord" href="/nlab/show/Euclidean+geometry">Euclidean geometry</a>, it may be called the <strong>Cartesian plane</strong>, <strong>Euclidean plane</strong>, or <strong>coordinate plane</strong>.</p>
@@ -929,6 +936,10 @@ margin-left: 0em;
 <li>
 <p><strong>plane</strong>, <a class="existingWikiWord" href="/nlab/show/surface">surface</a></p>
 </li>
+
+<li>
+<p><span class="newWikiWord">slope of a line<a href="/nlab/new/slope+of+a+line">?</a></span></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -940,14 +951,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 03:53:38.
+  Last revised on October  3, 2018 at 10:46:13.
   See the <a href="https://ncatlab.org/nlab/history/plane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plane/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/plane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/plane/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/plane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/plane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/plane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
